# piglar

./: CMakeLists.txt  README.md  config.txt  sample-config.txt  todo.txt
notes/: rpr.py
res/shaders/: fragmentShader.glsl  vertexShader.glsl
res/shaders/rainbowpigshaders/: fragmentShader.glsl  vertexShader.glsl
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  CameraConfig.h  CameraManager.cpp  CameraManager.h  Entities.cpp  Entities.h  Entity.h  GLMIncludes.h  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  Input.cpp  Input.h  MainTileMap.cpp  MainTileMap.h  MechanicsConfig.h  MouseManager.cpp  MouseManager.h  Pig.cpp  Pig.h  Player.cpp  Player.h  Random.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  RoadMap.cpp  RoadMap.h  RoadMapGen.cpp  RoadMapGen.h  RoadMapGenCell.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h  Sprite.cpp  (+36 more)
src/deprecated/: IndexBuffer.cpp  IndexBuffer.h  Rectangle.cpp  Rectangle.h  ResourceManager.cpp  ResourceManager.h  ResourceManager1.h  VertexBuffer.cpp  VertexBuffer.h
src/generator/: BottomUpRectPlacer.cpp  BottomUpRectPlacer.h  Params.h  Rectangle.h  RoadMapGen.cpp  RoadMapGen.h  TreeGenParams.h  TreeGenerator.cpp  TreeGenerator.h  bottomuprectplacer.cpp  bottomuprectplacer.h  findFirstContact.h  findFirstContactGeneric.h  generator.cpp  generator.h  line.h  lineFunc.cpp  lineFunc.h  mergeRectangle.cpp  placeRectangle.cpp  rectUtil.cpp  rectUtil.h  rectangleplacementrecorder.cpp  rectangleplacementrecorder.h  rotateLine.cpp  treeGenData.h
src/old-generator/: RoadMapGen.h  RoadMapGenNode.cpp
src/opengl/: Buffer.cpp  Buffer.h  Display.cpp  Display.h  Shader.cpp  Shader.h  Shape.h  SquareRenderer.cpp  SquareRenderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  opengl.h
src/util/: CachedFunction.h  CompassDirection.h  Fraction.h  PosRectangle.h  Random.cpp  Random.h  compassUtil.cpp  compassUtil.h  compassVec.h  getRotateAcwMatrix.h  line.h  lineConsistencyCheck.h  lineFunc.cpp  lineFunc.h  lineUtil.cpp  printVar.h  rangeFor.h  rotateCompassDir.h  singleton.h  spawnEvenly.cpp  timeUtil.cpp  util.cpp  vectors.h
src/world/: Entity.h  Pig.cpp  Pig.h  Player.h  Scene.cpp  Scene.h  SquareEntity.cpp  collisionDetection.cpp
src/world/generator/: BottomUpRectPlacer.cpp  BottomUpRectPlacer.h  RoadMapGen.cpp  RoadMapGen.h  TreeGenerator.cpp  TreeGenerator.h  rectUtil.cpp  rectUtil.h  treeGenData.h
unused/: Shape.cpp  Shape.h
unused/generator/: lineFunc.cpp  lineFunc.h
unused/old-generator/: RoadMapGen.h  RoadMapGenNode.h
